# ai-request-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: flow.drawio  flow.md
examples/: input.json  output.json
src/request_agent/: __init__.py  api.py  config.py  main.py  prompts.py  schemas.py  service.py
src/request_agent/providers/: base.py  mock_provider.py  ollama_provider.py
src/request_agent/utils/: text.py
tests/: test_api.py  test_cli_service_layer.py  test_fallback.py  test_mock_provider.py  test_schemas.py
